# flask-keycloak

./: .gitignore  README.md  app.py  pyproject.toml
flask_keycloak/: __main__.py  framework.py
flask_keycloak/views/: api.py  iam.py
templates/: index.html
