[tool.poetry]
name = "flask-keycloak"
version = "0.1.0"
description = ""
authors = []
packages = [
    { include = "flask_keycloak/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
Authlib = "^0.15.5"
Flask = "^2.0.2"
certifi = "^2021.10.8"
requests = "^2.27.1"
blinker = "^1.4"
Flask_Login = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
